# PythonBuildDemo

./: .gitignore  README.md  pyproject.toml  setup.py
my_pkg/: __init__.py
my_pkg/utils/: __init__.py
tests/: test_import.py
