[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg"
version = "0.1.0"
authors = [{name = "Your Name", email = "your@email.com"}]
description = "A small example package"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = ["requests>=2.24.0", "pandas>=1.0.0"]
# dynamic = ["version"]  # 动态版本（如从文件读取）
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"


[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["sphinx"]


[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[tool.setuptools]
packages = ["my_pkg"] # 直接列出包名

# packages = { find = {} }  # 自动发现所有包
# packages = { find = { where = ["src"], include = ["mypkg*"] } }